[package]
name = "skymask-rs"
version = "0.1.1"
edition = "2021"
description = "Compute piecewise analytical solutions of skymask for given polyhedra"
license = "MIT"
readme = "README.md"

[dependencies]
shapefile = "0.6.0"
ndarray = "0.16.1"
ordered-float = "4.6.0"
kdtree = "0.7.0"
rayon = "1.10.0"
num-traits = "0.2.19"
rangemap = "1.5.1"
